# dapr-pubsub-test

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  application.py  client.py  config.py  container.py  dapr.yaml  docker-compose.yml  main.py  pyproject.toml  server.py  tmp.py  topic.py
.dapr/components/: pubsub.yaml
